--- a/best-practices/add-rolebinding/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices/add-rolebinding/.chainsaw-test/chainsaw-test.yaml
@@ -22,6 +22,8 @@ spec:
         content: |
           #!/bin/bash
           set -eu
+          cp $KUBECONFIG temp
+          export KUBECONFIG=./temp
           export USERNAME=addrbuser
           export CA=ca.crt
           #### Get CA certificate from kubeconfig assuming it's the first in the list.
@@ -57,18 +59,21 @@ spec:
           kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
           # Delete CSR
           kubectl delete csr $USERNAME
-  - name: step-03
-    try:
     - apply:
         file: chainsaw-step-03-apply-1.yaml
     - apply:
         file: chainsaw-step-03-apply-2.yaml
-  - name: step-04
-    try:
     - apply:
         file: ns.yaml
     - script:
-        content: kubectl create --context=addrbuser-context -f ns-rb.yaml
+        content: |
+          set -eu
+          export KUBECONFIG=./temp
+          kubectl create --context=addrbuser-context -f ns-rb.yaml
+    finally:
+    - script:
+        content: |
+          rm ./temp
   - name: step-05
     try:
     - assert:
@@ -77,9 +82,5 @@ spec:
         file: rb-not-gen.yaml
   - name: step-06
     try:
-    - script:
-        content: kubectl config unset users.addrbuser
-    - script:
-        content: kubectl config unset contexts.addrbuser-context
     - script:
         content: kubectl delete -f ns-rb.yaml
