--- a/other/limit-configmap-for-sa/.chainsaw-test/chainsaw-test.yaml
+++ b/other/limit-configmap-for-sa/.chainsaw-test/chainsaw-test.yaml
@@ -44,13 +44,9 @@ spec:
           # Setting up the SA user
           export TOKEN_SA=`kubectl get secret another-secret -n another-namespace -ojsonpath='{.data.token}' | base64 -d`
           kubectl config set-credentials another-user --token=${TOKEN_SA}
-          kubectl config set-context another-context --user=another-user --cluster=kind-kind --namespace=another-namespace
+          kubectl config set-context another-context --user=another-user --cluster=chainsaw --namespace=another-namespace
 
           # Applying Manifests
           if kubectl create --context=another-context -f cm-bad.yaml; then exit 1; else echo "success: bad cm failed to create by sa"; fi
           if kubectl create -f cm-bad.yaml; then exit 1; else echo "success: bad cm failed to create by cluster-admin"; fi
           kubectl create --context=another-context -f cm-good.yaml
-
-          # Unset the context and user
-          kubectl config unset contexts.another-context
-          kubectl config unset users.another-user
