--- a/other/block-cluster-admin-from-ns/.chainsaw-test/chainsaw-test.yaml
+++ b/other/block-cluster-admin-from-ns/.chainsaw-test/chainsaw-test.yaml
@@ -20,6 +20,8 @@ spec:
         content: |
           #!/bin/bash
           set -eu
+          cp $KUBECONFIG temp
+          export KUBECONFIG=./temp
           export USERNAME=testuser
           export CA=ca.crt
           #### Get CA certificate from kubeconfig assuming it's the first in the list.
@@ -55,38 +57,43 @@ spec:
           kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
           # Delete CSR
           kubectl delete csr $USERNAME
-  - name: step-03
-    try:
     - apply:
         file: chainsaw-step-03-apply-1.yaml
-  - name: step-04
-    try:
     - script:
-        content: kubectl create -f good-cm.yaml
+        content: |
+          set -eu
+          export KUBECONFIG=./temp
+          kubectl create -f good-cm.yaml
     - script:
-        content: if kubectl --context=testuser-context apply -f bad-cm-update.yaml;
-          then exit 1; else exit 0; fi
+        content: |
+          set -eu
+          export KUBECONFIG=./temp
+          if kubectl --context=testuser-context apply -f bad-cm-update.yaml; then exit 1; else exit 0; fi
     - script:
-        content: if kubectl --context=testuser-context delete -f good-cm.yaml; then
-          exit 1; else exit 0; fi
+        content: |
+          set -eu
+          export KUBECONFIG=./temp
+          if kubectl --context=testuser-context delete -f good-cm.yaml; then exit 1; else exit 0; fi
     - script:
-        content: kubectl --context=testuser-context create -f good-pod.yaml
+        content: |
+          set -eu
+          export KUBECONFIG=./temp
+          kubectl --context=testuser-context create -f good-pod.yaml
     - script:
-        content: if kubectl --context=testuser-context create -f bad-pod.yaml; then
-          exit 1; else exit 0; fi
-  - name: step-05
-    try:
-    - script:
-        content: kubectl config unset users.testuser
-    - script:
-        content: kubectl config unset contexts.testuser-context
-  - name: step-06
-    try:
+        content: |
+          set -eu
+          export KUBECONFIG=./temp
+          if kubectl --context=testuser-context create -f bad-pod.yaml; then exit 1; else exit 0; fi
     - apply:
         file: good-pod-not-admin.yaml
-  - name: step-07
-    try:
+    finally:
     - script:
-        content: kubectl delete -f good-pod.yaml
+        content: kubectl delete -f good-pod.yaml --ignore-not-found
     - script:
-        content: kubectl delete -f good-cm.yaml
+        content: kubectl delete -f good-cm.yaml --ignore-not-found
+    - script:
+        content: kubectl delete -f bad-cm-update.yaml --ignore-not-found
+    - script:
+        content: |
+          set -e
+          rm ./temp
