--- a/other/inspect-csr/.chainsaw-test/chainsaw-test.yaml
+++ b/other/inspect-csr/.chainsaw-test/chainsaw-test.yaml
@@ -12,6 +12,8 @@ spec:
         content: |
           #!/bin/bash
           set -eu
+          cp $KUBECONFIG temp
+          export KUBECONFIG=./temp
           export USERNAME=inspect-csr-user
           export CA=ca.crt
           #### Get CA certificate from kubeconfig assuming it's the first in the list.
@@ -47,18 +49,16 @@ spec:
           kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
           # Delete CSR
           kubectl delete csr $USERNAME
-  - name: step-02
-    try:
     - apply:
         file: ../inspect-csr.yaml
     - apply:
         file: crolb-user.yaml
     - assert:
         file: policy-ready.yaml
-  - name: step-03
-    try:
     - script:
         content: |
+          set -eu
+          export KUBECONFIG=./temp
           cat <<EOF | kubectl --context=inspect-csr-user-context apply -f -
           apiVersion: certificates.k8s.io/v1
           kind: CertificateSigningRequest
@@ -72,12 +72,9 @@ spec:
           EOF
     - assert:
         file: chainsaw-step-03-assert-1.yaml
-  - name: step-04
-    try:
     - script:
         content: kubectl delete csr inspect-csr-user
+    finally:
     - script:
-        content: kubectl config unset users.inspect-csr-user
-    - script:
-        content: kubectl config unset contexts.inspect-csr-user-context
-
+        content: |
+          rm ./temp
