--- a/psa/deny-privileged-profile/.chainsaw-test/chainsaw-test.yaml
+++ b/psa/deny-privileged-profile/.chainsaw-test/chainsaw-test.yaml
@@ -26,6 +26,8 @@ spec:
         content: |
           #!/bin/bash
           set -eu
+          cp $KUBECONFIG temp
+          export KUBECONFIG=./temp
           export USERNAME=denyprivilegeduser
           export CA=ca.crt
           #### Get CA certificate from kubeconfig assuming it's the first in the list.
@@ -61,32 +63,36 @@ spec:
           kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
           # Delete CSR
           kubectl delete csr $USERNAME
-  - name: step-03
-    try:
     - apply:
         file: chainsaw-step-03-apply-1.yaml
     - apply:
         file: chainsaw-step-03-apply-2.yaml
-  - name: step-04
-    try:
     - script:
-        content: kubectl --context=denyprivilegeduser-context create -f ns-good.yaml
+        content: |
+          #!/bin/bash
+          set -eu
+          export KUBECONFIG=./temp
+          kubectl --context=denyprivilegeduser-context create -f ns-good.yaml
     - script:
-        content: if kubectl --context=denyprivilegeduser-context create -f ns-bad.yaml;
-          then exit 1; else exit 0; fi
-    - script:
-        content: kubectl delete -f ns-good.yaml
+        content: |
+          #!/bin/bash
+          set -eu
+          export KUBECONFIG=./temp
+          if kubectl --context=denyprivilegeduser-context create -f ns-bad.yaml; then exit 1; else exit 0; fi
     - sleep:
         duration: 5s
+    finally:
+    - script:
+        content: kubectl delete -f ns-good.yaml --ignore-not-found
+    - script:
+        content: kubectl delete -f ns-bad.yaml --ignore-not-found
+    - script:
+        content: |
+          set -e
+          rm ./temp
   - name: step-05
     try:
     - apply:
         file: ns-good.yaml
     - apply:
         file: ns-bad.yaml
-  - name: step-99
-    try:
-    - script:
-        content: kubectl config unset users.denyprivilegeduser
-    - script:
-        content: kubectl config unset contexts.denyprivilegeduser-context
