Add require-run-as-nonroot policy that use CEL expressions
Add an additional test where securityContext is present but runAsNonRoot
is not.

Fixes: #824
Signed-off-by: jayme-github <jayme-github@users.noreply.github.com>

--- a/pod-security/restricted/require-run-as-nonroot/.chainsaw-test/pod-bad.yaml
+++ b/pod-security/restricted/require-run-as-nonroot/.chainsaw-test/pod-bad.yaml
@@ -211,3 +211,14 @@ spec:
   securityContext:
     runAsNonRoot: false
 ---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod16
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+  securityContext:
+    allowPrivilegeEscalation: false
+---
