--- a/pod-security-cel/restricted/require-run-as-nonroot/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/require-run-as-nonroot/.kyverno-test/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - ../require-run-as-nonroot.yaml
 resources:
-- resource.yaml
+- ../../../../pod-security/restricted/require-run-as-nonroot/.kyverno-test/resource.yaml
 results:
 - kind: CronJob
   policy: require-run-as-nonroot
