--- a/flux/verify-flux-images/artifacthub-pkg.yml
+++ b/flux/verify-flux-images/artifacthub-pkg.yml
@@ -1,12 +1,12 @@
 name: verify-flux-images
 version: 1.0.0
-displayName: Verify Flux Imgaes
-createdAt: "2024-01-24T06:00:33.000Z"
+displayName: Verify Flux Images
+createdAt: "2024-03-01T06:00:33.000Z"
 description: >-
   Ensures that container images used to run Flux controllers in the cluster are signed with valid Cosign signatures. Prevents the deployment of untrusted or potentially compromised Flux images. Protects the integrity and security of the Flux deployment process.
 install: |-
   ```shell
-  kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/other/verify-flux-images/verify-flux-images.yml
+  kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/flux/verify-flux-images/verify-flux-images.yaml
   ```
 keywords:
   - kyverno
@@ -18,5 +18,5 @@ readme: |
 annotations:
   kyverno/category: "Flux"
   kyverno/kubernetesVersion: "1.23"
-  kyverno/subject: "Deployment"
-digest: df73394092f0b7e3e52ff38354169f015795074523bdf19057273626e65a441c
+  kyverno/subject: "Pod"
+digest: 2c2cd329a65c5a989701d1ab63f1953851ab151605c033c1e89d521b144feadc
