--- a/flux/verify-flux-images/verify-flux-images.yaml
+++ b/flux/verify-flux-images/verify-flux-images.yaml
@@ -18,8 +18,6 @@ metadata:
 spec:
   validationFailureAction: Audit
   background: false
-  webhookTimeoutSeconds: 30
-  failurePolicy: Fail
   rules:
     - name: verify-cosign-signature
       match:
@@ -42,6 +40,7 @@ spec:
             - "docker.io/fluxcd/image-reflector-controller:*"
             - "docker.io/fluxcd/image-automation-controller:*"
           mutateDigest: false
+          verifyDigest: false
           attestors:
             - entries:
                 - keyless:
