--- a/flux/verify-git-repositories/artifacthub-pkg.yml
+++ b/flux/verify-git-repositories/artifacthub-pkg.yml
@@ -1,12 +1,12 @@
 name: verify-git-repositories
 version: 1.0.0
 displayName: Verify Git Repositories
-createdAt: "2024-01-24T06:00:33.000Z"
+createdAt: "2024-03-01T06:00:33.000Z"
 description: >-
   Ensures that Git repositories used for Flux deployments in a cluster originate from a specific, trusted organization. Prevents the use of untrusted or potentially risky Git repositories. Protects the integrity and security of Flux deployments.
 install: |-
   ```shell
-  kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/other/verify-git-repositories/verify-git-repositories.yml
+  kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/flux/verify-git-repositories/verify-git-repositories.yaml
   ```
 keywords:
   - kyverno
@@ -19,4 +19,4 @@ annotations:
   kyverno/category: "Flux"
   kyverno/kubernetesVersion: "1.23"
   kyverno/subject: "GitRepository"
-digest: 5964031fc76105911f6e129894bbb0ecc7886d8b08b2f50fbb4ddc05bbb8bc2e
+digest: 393d591c71b50d5a878a117544705691e6a342f84d02c8b4b6aeeda640e0cac4
