--- a/flux/verify-git-repositories/verify-git-repositories.yaml
+++ b/flux/verify-git-repositories/verify-git-repositories.yaml
@@ -6,8 +6,6 @@ metadata:
     policies.kyverno.io/title: Verify Git Repositories
     policies.kyverno.io/category: Flux
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: GitRepository
     policies.kyverno.io/description: >-
@@ -16,25 +14,21 @@ metadata:
       Prevents the use of untrusted or potentially risky Git repositories.
       Protects the integrity and security of Flux deployments.
 spec:  
-  # This provides users a working example of how an admin
-  # would be able to enforce git repository sources across
-  # all tenants.
-  validationFailureAction: Audit # Change to 'Enforce' once the specific org url is set.
+  validationFailureAction: Audit
   rules:
     - name: github-repositories-only
-      exclude:
-        resources:
-          namespaces:
-            - flux-system
       match:
         any:
         - resources:
             kinds:
               - GitRepository
+      exclude:
+        any:
+        - resources:
+            namespaces:
+              - flux-system
       validate:
-        message: ".spec.url must be from a repository within the organisation X"
-        anyPattern:
-        - spec:
-            url: "https://github.com/fluxcd/?*" # repositories in fluxcd via https
-        - spec:
-            url: "ssh://git@github.com:fluxcd/?*" # repositories in fluxcd via ssh
+        message: .spec.url must be from a repository within the organisation X
+        pattern:
+          spec:
+            url: https://github.com/fluxcd/?* | ssh://git@github.com:fluxcd/?*
