try version binding for record-creation-details on 1.29+
Signed-off-by: chipzoller <chipzoller@gmail.com>

--- a/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
+++ b/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,11 @@ metadata:
   creationTimestamp: null
   name: record-creation-details
 spec:
+  bindings:
+  - name: version
+    value: ($kubeVersion)
+  - name: minorversion
+    value: (to_number(split($kubeVersion,'.')[1]))
   steps:
   - name: step-01
     try:
