--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,4 +111,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
-          chainsaw test --config .chainsaw.yaml --include-test-regex '^chainsaw$/${{ matrix.tests }}' --no-color=false
+          chainsaw test --config .chainsaw.yaml --include-test-regex '^chainsaw$/${{ matrix.tests }}' --no-color=false --values - <<EOF
+          kubeVersion: ${{ matrix.k8s-version.version }}
+          EOF
