--- a/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
+++ b/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   bindings:
   - name: version
-    value: ($kubeVersion)
+    value: ($values.kubeVersion)
   - name: minorversion
-    value: (to_number(split($kubeVersion,'.')[1]))
+    value: (to_number(split($version,'.')[1]))
   steps:
   - name: step-01
     try:
