--- a/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
+++ b/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
@@ -2,10 +2,13 @@
 apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  creationTimestamp: null
   name: record-creation-details
 spec:
   bindings:
+  # A value named kubeVersion must be passed to Chainsaw using the --values flag the
+  # value of which is expected to be something like 'v1.26.4'. That value will then be
+  # processed by the bindings defined in this test and a final value will be evaluated
+  # by an assertion in the files defined in 'step-02'.
   - name: version
     value: ($values.kubeVersion)
   - name: minorversion
