--- a/other/replace-image-registry-with-harbor/.kyverno-test/patchedResource.yaml
+++ b/other/replace-image-registry-with-harbor/.kyverno-test/patchedResource.yaml
@@ -5,6 +5,5 @@ metadata:
   namespace: default
 spec:
   containers:
-  - image: harbor.example.com/k8s/nginx:latest
+  - image: harbor.example.com/k8s/library/nginx:latest
     name: docker-with-registry
-
