--- a/other/replace-image-registry-with-harbor/.chainsaw-test/chainsaw-test.yaml
+++ b/other/replace-image-registry-with-harbor/.chainsaw-test/chainsaw-test.yaml
@@ -1,7 +1,6 @@
 apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  creationTimestamp: null
   name: replace-image-registry-with-harbor
 spec:
   steps:
@@ -9,25 +8,13 @@ spec:
     try:
     - apply:
         file: ../replace-image-registry-with-harbor.yaml
-    - apply:
-        file: ns.yaml
     - assert:
         file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
-        file: pods.yaml
+        file: ../.kyverno-test/resource.yaml
     - assert:
-        file: pod-patched.yaml
-  - name: step-03
-    try:
-    - command:
-        args:
-        - delete
-        - all
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - replace-image-registry-with-harbor-ns
-        entrypoint: kubectlp
+        file: ../.kyverno-test/patchedResource.yaml
+    - assert:
+        file: ../.kyverno-test/patchedResource2.yaml
