--- a/other/replace-image-registry-with-harbor/.chainsaw-test/policy-ready.yaml
+++ b/other/replace-image-registry-with-harbor/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,4 @@ kind: ClusterPolicy
 metadata:
   name: replace-image-registry-with-harbor
 status:
-  conditions:
-  - reason: Succeeded
-    status: "True"
-    type: Ready
+  ready: true
