--- a/other/replace-image-registry-with-harbor/.kyverno-test/patchedResource2.yaml
+++ b/other/replace-image-registry-with-harbor/.kyverno-test/patchedResource2.yaml
@@ -4,13 +4,15 @@ metadata:
   name: myapp-pod2
   namespace: default
 spec:
-  containers:
-  - image: harbor.example.com/k8s/nginx:latest
-    name: without-registry
   initContainers:
   - command:
     - sh
     - -c
     - echo The app is running! && sleep 3600
-    image: harbor.example.com/k8s/busybox:latest
+    image: harbor.example.com/k8s/library/busybox:latest
     name: init-without-registry
+  containers:
+  - image: harbor.example.com/k8s/library/nginx:latest
+    name: without-registry
+  - name: busybox03
+    image: ghcr.io/kyverno/test-verify-image:unsigned
