--- a/other/replace-image-registry-with-harbor/.kyverno-test/resource.yaml
+++ b/other/replace-image-registry-with-harbor/.kyverno-test/resource.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: myapp-pod1
+  namespace: default
 spec:
   containers:
     - image: docker.io/nginx:latest
@@ -11,10 +12,13 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: myapp-pod2
+  namespace: default
 spec:
   containers:
   - name: without-registry
     image: nginx:latest
+  - name: busybox03
+    image: ghcr.io/kyverno/test-verify-image:unsigned
   initContainers:
   - name: init-without-registry
     image: busybox:latest
