--- a/other/deployment-replicas-higher-than-pdb/deployment-replicas-higher-than-pdb.yaml
+++ b/other/deployment-replicas-higher-than-pdb/deployment-replicas-higher-than-pdb.yaml
@@ -25,6 +25,9 @@ spec:
       - resources:
           kinds:
           - PodDisruptionBudget
+          operations:
+          - CREATE
+          - UPDATE
     context:
     - name: deploymentreplicas
       apiCall:
