--- a/best-practices-cel/restrict-node-port/restrict-node-port.yaml
+++ b/best-practices-cel/restrict-node-port/restrict-node-port.yaml
@@ -3,9 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: restrict-nodeport
   annotations:
-    policies.kyverno.io/title: Disallow NodePort
-    policies.kyverno.io/category: Best Practices
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Disallow NodePort in CEL expressions
+    policies.kyverno.io/category: Best Practices in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
     policies.kyverno.io/description: >-
@@ -15,7 +16,7 @@ metadata:
       with additional upstream security checks. This policy validates that any new Services
       do not use the `NodePort` type.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-nodeport
@@ -25,7 +26,7 @@ spec:
           kinds:
           - Service
     validate:
-      message: "Services of type NodePort are not allowed."
-      pattern:
-        spec:
-          =(type): "!NodePort"
+      cel:
+        expressions:
+          - expression: "has(object.spec.type) ? (object.spec.type != 'NodePort') : true"
+            message: "Services of type NodePort are not allowed."
