Fix rule name to match policy name
Signed-off-by: jayme-github <jayme-github@users.noreply.github.com>

--- a/pod-security-cel/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
+++ b/pod-security-cel/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
@@ -17,7 +17,7 @@ spec:
   validationFailureAction: Audit
   background: true
   rules:
-    - name: run-as-non-root
+    - name: run-as-nonroot
       match:
         any:
         - resources:
