--- a/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
+++ b/other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
@@ -10,9 +10,9 @@ spec:
   # processed by the bindings defined in this test and a final value will be evaluated
   # by an assertion in the files defined in 'step-02'.
   - name: version
-    value: ($values.kubeVersion)
+    value: (x_k8s_server_version($config))
   - name: minorversion
-    value: (to_number(split($version,'.')[1]))
+    value: (to_number($version.minor))
   steps:
   - name: step-01
     try:
