--- a/best-practices-cel/require-labels/require-labels.yaml
+++ b/best-practices-cel/require-labels/require-labels.yaml
@@ -3,9 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: require-labels
   annotations:
-    policies.kyverno.io/title: Require Labels
-    policies.kyverno.io/category: Best Practices
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Require Labels in CEL expressions
+    policies.kyverno.io/category: Best Practices in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Label
     policies.kyverno.io/description: >-
@@ -14,7 +15,7 @@ metadata:
       all tools can understand. The recommended labels describe applications in a way that can be
       queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-for-labels
@@ -24,8 +25,9 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "The label `app.kubernetes.io/name` is required."
-      pattern:
-        metadata:
-          labels:
-            app.kubernetes.io/name: "?*"
+      cel:
+        expressions:
+          - expression: >-
+              has(object.metadata.labels) && 
+              'app.kubernetes.io/name' in object.metadata.labels && object.metadata.labels['app.kubernetes.io/name'] != ""
+            message: "The label `app.kubernetes.io/name` is required." 
