--- a/best-practices-cel/restrict-service-external-ips/restrict-service-external-ips.yaml
+++ b/best-practices-cel/restrict-service-external-ips/restrict-service-external-ips.yaml
@@ -3,9 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: restrict-external-ips
   annotations:
-    policies.kyverno.io/title: Restrict External IPs
-    policies.kyverno.io/category: Best Practices
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Restrict External IPs in CEL expressions
+    policies.kyverno.io/category: Best Practices in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
     policies.kyverno.io/description: >-
@@ -14,7 +15,7 @@ metadata:
       See: https://github.com/kyverno/kyverno/issues/1367. This policy validates
       that the `externalIPs` field is not set on a Service.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-ips
@@ -24,10 +25,11 @@ spec:
           kinds:
           - Service
     validate:
-      message: "externalIPs are not allowed."
-      pattern:
-        spec:
-          # restrict external IP addresses
-          # you can alternatively restrict to a known set of addresses using:
-          #     =(externalIPs): ["37.10.11.53", "153.10.20.1"]
-          X(externalIPs): "null"
+      cel:
+        expressions:
+          - expression: "!has(object.spec.externalIPs)"
+            # restrict external IP addresses
+            # you can alternatively restrict to a known set of addresses using:
+            #     !has(object.spec.externalIPs) || 
+            #     object.spec.externalIPs.all(ip, ip in ["37.10.11.53", "153.10.20.1"]) 
+            message: "externalIPs are not allowed."
