--- a/best-practices-cel/require-ro-rootfs/require-ro-rootfs.yaml
+++ b/best-practices-cel/require-ro-rootfs/require-ro-rootfs.yaml
@@ -3,11 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: require-ro-rootfs
   annotations:
-    policies.kyverno.io/title: Require Read-Only Root Filesystem
-    policies.kyverno.io/category: Best Practices, EKS Best Practices, PSP Migration
+    policies.kyverno.io/title: Require Read-Only Root Filesystem in CEL expressions
+    policies.kyverno.io/category: Best Practices, EKS Best Practices, PSP Migration in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
+    policies.kyverno.io/minversion: 1.11.0
     policies.kyverno.io/description: >-
       A read-only root file system helps to enforce an immutable infrastructure strategy;
       the container only needs to write on the mounted volume that persists the state.
@@ -15,7 +16,7 @@ metadata:
       host system. This policy validates that containers define a securityContext
       with `readOnlyRootFilesystem: true`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-readOnlyRootFilesystem
@@ -25,9 +26,11 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Root filesystem must be read-only."
-      pattern:
-        spec:
-          containers:
-          - securityContext:
-              readOnlyRootFilesystem: true
+      cel:
+        expressions:
+          - expression: >-
+              object.spec.containers.all(container,
+              has(container.securityContext) &&
+              container.securityContext.readOnlyRootFilesystem ==  true)
+            message: "Root filesystem must be read-only."
+          
