--- a/best-practices-cel/restrict-image-registries/restrict-image-registries.yaml
+++ b/best-practices-cel/restrict-image-registries/restrict-image-registries.yaml
@@ -3,11 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: restrict-image-registries
   annotations:
-    policies.kyverno.io/title: Restrict Image Registries
-    policies.kyverno.io/category: Best Practices, EKS Best Practices
+    policies.kyverno.io/title: Restrict Image Registries in CEL expressions
+    policies.kyverno.io/category: Best Practices, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.26"
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Images from unknown, public registries can be of dubious quality and may not be
@@ -16,7 +16,7 @@ metadata:
       policy validates that container images only originate from the registry `eu.foo.io` or
       `bar.io`. Use of this policy requires customization to define your allowable registries.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-registries
@@ -26,12 +26,22 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Unknown image registry."
-      pattern:
-        spec:
-          =(ephemeralContainers):
-          - image: "eu.foo.io/* | bar.io/*"
-          =(initContainers):
-          - image: "eu.foo.io/* | bar.io/*"
-          containers:
-          - image: "eu.foo.io/* | bar.io/*"
+      cel:
+        expressions:
+          - expression: >-
+              (
+                !has(object.spec.ephemeralContainers) || object.spec.ephemeralContainers.all(container,
+                container.image.startsWith('eu.foo.io/') ||
+                container.image.startsWith('bar.io/'))
+              ) &&
+              (
+                !has(object.spec.initContainers) || object.spec.initContainers.all(container, 
+                container.image.startsWith('eu.foo.io/') ||
+                container.image.startsWith('bar.io/'))
+              ) &&
+              (
+                object.spec.containers.all(container, 
+                container.image.startsWith('eu.foo.io/') ||
+                container.image.startsWith('bar.io/'))
+              )
+            message: "Unknown image registry."
