convert disallow-latest-tag to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices-cel/disallow-latest-tag/disallow-latest-tag.yaml
+++ b/best-practices-cel/disallow-latest-tag/disallow-latest-tag.yaml
@@ -3,9 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: disallow-latest-tag
   annotations:
-    policies.kyverno.io/title: Disallow Latest Tag
-    policies.kyverno.io/category: Best Practices
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Disallow Latest Tag in CEL expressions
+    policies.kyverno.io/category: Best Practices in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
@@ -14,7 +15,7 @@ metadata:
       a specific version of an application Pod. This policy validates that the image
       specifies a tag and that it is not called `latest`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: require-image-tag
@@ -24,11 +25,10 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "An image tag is required."
-      pattern:
-        spec:
-          containers:
-          - image: "*:*"
+      cel:
+        expressions:
+          - expression: "object.spec.containers.all(container, container.image.contains(':'))"
+            message: "An image tag is required."
   - name: validate-image-tag
     match:
       any:
@@ -36,8 +36,7 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Using a mutable image tag e.g. 'latest' is not allowed."
-      pattern:
-        spec:
-          containers:
-          - image: "!*:latest"
+      cel:
+        expressions:
+          - expression: "object.spec.containers.all(container, !container.image.endsWith(':latest'))"
+            message: "Using a mutable image tag e.g. 'latest' is not allowed."
