add missing restricted field for ephemeral containers
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/pod-security/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
+++ b/pod-security/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
@@ -24,8 +24,8 @@ spec:
               - Pod
       validate:
         message: >-
-          Privileged mode is disallowed. The fields spec.containers[*].securityContext.privileged
-          and spec.initContainers[*].securityContext.privileged must be unset or set to `false`.
+          Privileged mode is disallowed. The fields spec.containers[*].securityContext.privileged,
+          spec.initContainers[*].securityContext.privileged, and spec.ephemeralContainers[*].securityContext.privileged must be unset or set to `false`.
         pattern:
           spec:
             =(ephemeralContainers):
