--- a/best-practices-cel/disallow-helm-tiller/disallow-helm-tiller.yaml
+++ b/best-practices-cel/disallow-helm-tiller/disallow-helm-tiller.yaml
@@ -3,9 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: disallow-helm-tiller
   annotations:
-    policies.kyverno.io/title: Disallow Helm Tiller
-    policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Disallow Helm Tiller in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
@@ -15,7 +16,7 @@ metadata:
       Tiller for these reasons. This policy validates that there is not an image
       containing the name `tiller`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: validate-helm-tiller
@@ -25,9 +26,8 @@ spec:
             kinds:
               - Pod
       validate:
-        message: "Helm Tiller is not allowed"
-        pattern:
-          spec:
-            containers:
-              - name: "*"
-                image: "!*tiller*"
+        cel:
+          expressions:
+            - expression: "object.spec.containers.all(container, !container.image.contains('tiller'))"
+              message: "Helm Tiller is not allowed"
+
