--- a/other/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
+++ b/other/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
@@ -7,9 +7,9 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ClusterRole, RBAC
-    kyverno.io/kyverno-version: 1.7.0
+    kyverno.io/kyverno-version: 1.11.4
     policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kubernetes-version: "1.27"
     policies.kyverno.io/description: >-
       A ClusterRole with nodes/proxy resource access allows a user to
       perform anything the kubelet API allows. It also allows users to bypass
@@ -31,7 +31,10 @@ spec:
         message: "A ClusterRole containing the nodes/proxy resource is not allowed."
         deny:
           conditions:
-            any:
+            all:
             - key: nodes/proxy
               operator: AnyIn
               value: "{{ request.object.rules[].resources[] }}"
+            - key: ""
+              operator: AnyIn
+              value: "{{ request.object.rules[].apiGroups[] }}"
