--- a/best-practices-cel/disallow-empty-ingress-host/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices-cel/disallow-empty-ingress-host/.chainsaw-test/chainsaw-test.yaml
@@ -10,6 +10,14 @@ spec:
     try:
     - apply:
         file: ../disallow-empty-ingress-host.yaml
+    - patch:
+        resource:
+          apiVersion: kyverno.io/v1
+          kind: ClusterPolicy
+          metadata:
+            name: disallow-empty-ingress-host
+          spec:
+            validationFailureAction: Enforce
     - assert:
         file: policy-ready.yaml
   - name: step-02
