convert require-probes to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices-cel/require-probes/require-probes.yaml
+++ b/best-practices-cel/require-probes/require-probes.yaml
@@ -4,8 +4,10 @@ metadata:
   name: require-pod-probes
   annotations:
     pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,StatefulSet
-    policies.kyverno.io/title: Require Pod Probes
-    policies.kyverno.io/category: Best Practices, EKS Best Practices
+    policies.kyverno.io/title: Require Pod Probes in CEL expressions
+    policies.kyverno.io/category: Best Practices, EKS Best Practices in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
@@ -17,7 +19,7 @@ metadata:
       This policy validates that all containers have one of livenessProbe, readinessProbe,
       or startupProbe defined.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-probes
@@ -26,26 +28,15 @@ spec:
       - resources:
           kinds:
           - Pod
-    preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
+    celPreconditions:
+      - expression: "request.operation in ['CREATE', 'UPDATE']"
+        name: "operation must be create or update"
     validate:
-      message: "Liveness, readiness, or startup probes are required for all containers."
-      foreach:
-      - list: request.object.spec.containers[]
-        deny:
-          conditions:
-            all:
-            - key: livenessProbe
-              operator: AllNotIn
-              value: "{{ element.keys(@)[] }}"
-            - key: startupProbe
-              operator: AllNotIn
-              value: "{{ element.keys(@)[] }}"
-            - key: readinessProbe
-              operator: AllNotIn
-              value: "{{ element.keys(@)[] }}"
+      cel:
+        expressions:
+          - expression: >-
+              object.spec.containers.all(container,
+              has(container.livenessProbe) || 
+              has(container.startupProbe) || 
+              has(container.readinessProbe))
+            message: "Liveness, readiness, or startup probes are required for all containers."
